; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_grep.c_prepend_default_options.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_grep.c_prepend_default_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i8***)* @prepend_default_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prepend_default_options(i8* %0, i32* %1, i8*** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8***, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i8**, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8*** %2, i8**** %6, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %62

14:                                               ; preds = %3
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @strlen(i8* %15)
  %17 = add nsw i32 %16, 1
  %18 = call i8* @xmalloc(i32 %17)
  store i8* %18, i8** %7, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = call i32 @prepend_args(i8* %19, i8* %20, i8** null)
  store i32 %21, i32* %8, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %9, align 4
  %24 = load i8***, i8**** %6, align 8
  %25 = load i8**, i8*** %24, align 8
  store i8** %25, i8*** %10, align 8
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %9, align 4
  %28 = add nsw i32 %26, %27
  %29 = add nsw i32 %28, 1
  %30 = sext i32 %29 to i64
  %31 = mul i64 %30, 8
  %32 = trunc i64 %31 to i32
  %33 = call i8* @xmalloc(i32 %32)
  %34 = bitcast i8* %33 to i8**
  store i8** %34, i8*** %11, align 8
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* %9, align 4
  %37 = add nsw i32 %35, %36
  %38 = load i32*, i32** %5, align 8
  store i32 %37, i32* %38, align 4
  %39 = load i8**, i8*** %11, align 8
  %40 = load i8***, i8**** %6, align 8
  store i8** %39, i8*** %40, align 8
  %41 = load i8**, i8*** %10, align 8
  %42 = getelementptr inbounds i8*, i8** %41, i32 1
  store i8** %42, i8*** %10, align 8
  %43 = load i8*, i8** %41, align 8
  %44 = load i8**, i8*** %11, align 8
  %45 = getelementptr inbounds i8*, i8** %44, i32 1
  store i8** %45, i8*** %11, align 8
  store i8* %43, i8** %44, align 8
  %46 = load i8*, i8** %4, align 8
  %47 = load i8*, i8** %7, align 8
  %48 = load i8**, i8*** %11, align 8
  %49 = call i32 @prepend_args(i8* %46, i8* %47, i8** %48)
  %50 = load i8**, i8*** %11, align 8
  %51 = sext i32 %49 to i64
  %52 = getelementptr inbounds i8*, i8** %50, i64 %51
  store i8** %52, i8*** %11, align 8
  br label %53

53:                                               ; preds = %60, %14
  %54 = load i8**, i8*** %10, align 8
  %55 = getelementptr inbounds i8*, i8** %54, i32 1
  store i8** %55, i8*** %10, align 8
  %56 = load i8*, i8** %54, align 8
  %57 = load i8**, i8*** %11, align 8
  %58 = getelementptr inbounds i8*, i8** %57, i32 1
  store i8** %58, i8*** %11, align 8
  store i8* %56, i8** %57, align 8
  %59 = icmp ne i8* %56, null
  br i1 %59, label %60, label %61

60:                                               ; preds = %53
  br label %53

61:                                               ; preds = %53
  br label %62

62:                                               ; preds = %61, %3
  ret void
}

declare dso_local i8* @xmalloc(i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @prepend_args(i8*, i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
